Fix footer hiding the bottom of the page on smaller screens.

--- a/summit/static/scss/_theme.scss
+++ b/summit/static/scss/_theme.scss
@@ -204,7 +204,9 @@ a {
   }
 }
 
-
+.container {
+  padding-bottom: 125px;
+}
 
 .intro-container {
   @include grid-row;
